--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,7 +23,7 @@
 .collum {
     display: flex;
     flex-direction: column ;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 img {
