--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,3 +47,53 @@ img {
     padding: 8px 12px;
     border-radius: 7px;
 }
+
+.switch {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: relative;
+    width: 60px;
+    height: 34px;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+    margin-right: 10px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #6e7866;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+/* Tekst binnen de switch */
+.switch-text {
+    display: inline-block;
+    font-weight: bold;
+    color: #dadada; /* Kleur van de tekst */
+}
