--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -97,3 +97,8 @@ input:checked + .slider:before {
     font-weight: bold;
     color: #dadada; /* Kleur van de tekst */
 }
+
+.space {
+    display: flex;
+    justify-content: space-between;
+}
